--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,52 @@
 </head>
 
 <body>
+  <div class="curtains-canvas" id="curtains-canvas"></div>
   <div id="root">
-
+    <div class="h-[500px]"></div>
+    <section class="interior">
+      <div class="interior-plane">
+        <img src="img/interior/atlantide.png" alt="" crossorigin="" data-sampler="texture1" id="texture1">
+        <img src="img/interior/flowers.png" alt="" crossorigin="" data-sampler="texture2" id="texture2">
+        <img src="img/interior/sea.png" alt="" crossorigin="" data-sampler="texture3" id="texture3">
+        <img src="img/interior/atlantide.png" alt="" crossorigin="" data-sampler="texture4" id="texture4">
+        <img src="img/interior/flowers.png" alt="" crossorigin="" data-sampler="texture5" id="texture5">
+        <img src="img/interior/sea.png" alt="" crossorigin="" data-sampler="texture6" id="texture6">
+      </div>
+      <div class="columns-3 gap-16">
+        <div class="interior-item mb-16">
+          <div class="interior-item-plane">
+            <img src="img/interior/atlantide.png" alt="" crossorigin="" data-sampler="planeTexture">
+          </div>
+        </div>
+        <div class="interior-item mb-16">
+          <div class="interior-item-plane">
+            <img src="img/interior/flowers.png" alt="" crossorigin="" data-sampler="planeTexture">
+          </div>
+        </div>
+        <div class="interior-item mb-16">
+          <div class="interior-item-plane">
+            <img src="img/interior/sea.png" alt="" crossorigin="" data-sampler="planeTexture">
+          </div>
+        </div>
+        <div class="interior-item mb-16">
+          <div class="interior-item-plane">
+            <img src="img/interior/atlantide.png" alt="" crossorigin="" data-sampler="planeTexture">
+          </div>
+        </div>
+        <div class="interior-item mb-16">
+          <div class="interior-item-plane">
+            <img src="img/interior/flowers.png" alt="" crossorigin="" data-sampler="planeTexture">
+          </div>
+        </div>
+        <div class="interior-item mb-16">
+          <div class="interior-item-plane">
+            <img src="img/interior/sea.png" alt="" crossorigin="" data-sampler="planeTexture">
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="h-[1500px]"></div>
   </div>
 </body>
 
