--- a/src/index.html
+++ b/src/index.html
@@ -10,52 +10,282 @@
 
 <body>
   <div class="curtains-canvas" id="curtains-canvas"></div>
-  <div id="root">
-    <div class="h-[500px]"></div>
-    <section class="interior">
-      <div class="interior-plane">
+
+  <header class="header">
+    <button class="btn-icon btn lg:hidden" data-toggle-link="menu">
+      <svg class="icon">
+        <use xlink:href="img/icons.svg#menu" />
+      </svg>
+    </button>
+    <div class="header-nav max-lg:hidden">
+      <a href="#" class="btn btn-text">Магазин</a>
+      <a href="#" class="btn btn-text">Как заказать</a>
+      <a href="#" class="btn btn-text">О нас</a>
+    </div>
+    <div class="header-logo">
+      <img src="img/logo.svg" alt="" class="max-lg:h-14">
+    </div>
+    <div class="header-contacts">
+      <a href="tel:8 918 020 00 00" class="btn btn-text font-semibold mx-auto max-md:hidden">8 918 020 00 00</a>
+      <div class="flex gap-2 max-md:ml-auto">
+        <a href="" target="_blank" class="btn btn-text">
+          <img src="img/telegramm.svg" alt="">
+        </a>
+        <a href="" target="_blank" class="btn btn-text">
+          <img src="img/pinterest.svg" alt="">
+        </a>
+      </div>
+    </div>
+  </header>
+
+  <div class="menu" id="menu">
+    <div class="flex items-center">
+      <div class="header-logo">
+        <img src="img/logo.svg" alt="" class="max-lg:h-14">
+      </div>
+      <button class="btn-icon btn lg:hidden ml-auto" data-toggle-link="menu">
+        <svg class="icon">
+          <use xlink:href="img/icons.svg#cross" />
+        </svg>
+      </button>
+    </div>
+    <div class="mt-7 space-y-8">
+      <a href="#" class="btn btn-text justify-start text-left">Магазин</a>
+      <a href="#" class="btn btn-text justify-start text-left">Как заказать</a>
+      <a href="#" class="btn btn-text justify-start text-left">О нас</a>
+    </div>
+    <div class="mt-12">
+      <a href="tel:8 918 020 00 00" class="btn btn-text font-semibold justify-start text-left">8 918 020 00 00</a>
+    </div>
+    <div class="mt-16">
+      <div class="opacity-40">Интерьерные картины для вашего дома</div>
+
+      <div class="flex gap-2 mt-8">
+        <a href="" target="_blank" class="btn btn-text">
+          <img src="img/telegramm.svg" alt="">
+        </a>
+        <a href="" target="_blank" class="btn btn-text">
+          <img src="img/pinterest.svg" alt="">
+        </a>
+      </div>
+
+    </div>
+  </div>
+  <div class="menu-shadow"></div>
+
+  <section class="started">
+    <div class="swiper started-content-slider w-full">
+      <div class="swiper-wrapper h-auto">
+        <% for(let i = 0; i < 12; i++) { %>
+        <div class="started-content swiper-slide">
+          <div class="text-center opacity-60">Картины для интерьера</div>
+          <div class="text-center title  mt-6 lg:mt-15">
+            Картины в технике <br>
+            текстурной живописи
+          </div>
+          <button class="btn btn-fill btn-black mx-auto mt-8 lg:mt-20">Смотреть всё</button>
+        </div>
+        <% } %>
+      </div>
+
+      <div class="slider-pagination mx-auto max-lg:mb-7 lg:mt-32"></div>
+    </div>
+    <div class="started-image-slider swiper w-full lg:p-8 " dir="rtl">
+      <div class="swiper-wrapper h-auto">
+        <% for(let i = 0; i < 12; i++) { %>
+        <div class="started-image swiper-slide">
+          <img src="img/started/1.png" alt="">
+        </div>
+        <% } %>
+      </div>
+    </div>
+
+  </section>
+
+
+  <section class="interior">
+    <!-- <div class="interior-plane">
         <img src="img/interior/atlantide.png" alt="" crossorigin="" data-sampler="texture1" id="texture1">
         <img src="img/interior/flowers.png" alt="" crossorigin="" data-sampler="texture2" id="texture2">
         <img src="img/interior/sea.png" alt="" crossorigin="" data-sampler="texture3" id="texture3">
         <img src="img/interior/atlantide.png" alt="" crossorigin="" data-sampler="texture4" id="texture4">
         <img src="img/interior/flowers.png" alt="" crossorigin="" data-sampler="texture5" id="texture5">
         <img src="img/interior/sea.png" alt="" crossorigin="" data-sampler="texture6" id="texture6">
-      </div>
-      <div class="columns-3 gap-16">
-        <div class="interior-item mb-16">
-          <div class="interior-item-plane">
-            <img src="img/interior/atlantide.png" alt="" crossorigin="" data-sampler="planeTexture">
-          </div>
+      </div> -->
+
+    <div class="title text-center mb-7 sm:mb-18">
+      Стильный интерьер
+    </div>
+
+    <div class="columns-2 lg:columns-3 gap-4 md:gap-5 lg:gap-16">
+      <div class="interior-item mb-4 md:mb-5 lg:mb-16 cursor-pointer">
+        <div class="interior-item-plane">
+          <img src="img/interior/atlantide.png" alt="" crossorigin="" data-sampler="planeTexture">
         </div>
-        <div class="interior-item mb-16">
-          <div class="interior-item-plane">
-            <img src="img/interior/flowers.png" alt="" crossorigin="" data-sampler="planeTexture">
-          </div>
-        </div>
-        <div class="interior-item mb-16">
-          <div class="interior-item-plane">
-            <img src="img/interior/sea.png" alt="" crossorigin="" data-sampler="planeTexture">
-          </div>
-        </div>
-        <div class="interior-item mb-16">
-          <div class="interior-item-plane">
-            <img src="img/interior/atlantide.png" alt="" crossorigin="" data-sampler="planeTexture">
-          </div>
-        </div>
-        <div class="interior-item mb-16">
-          <div class="interior-item-plane">
-            <img src="img/interior/flowers.png" alt="" crossorigin="" data-sampler="planeTexture">
-          </div>
-        </div>
-        <div class="interior-item mb-16">
-          <div class="interior-item-plane">
-            <img src="img/interior/sea.png" alt="" crossorigin="" data-sampler="planeTexture">
-          </div>
+        <div class="mt-5 opacity-40 max-sm:text-sm">Цветы Атлантиды</div>
+        <div class="font-alt mt-2 text-xl sm:text-2xl">4000 руб</div>
+        <div class="interior-item-hover ">
+          <img src="img/interior/atlantide-hover.png" alt="">
+          <div class="interior-item-hover-gradient"></div>
+          <button class="interior-item-hover-btn btn btn-white btn-contur relative">Подробнее</button>
         </div>
       </div>
-    </section>
-    <div class="h-[1500px]"></div>
-  </div>
+      <div class="interior-item mb-4 md:mb-5 lg:mb-16">
+        <div class="interior-item-plane">
+          <img src="img/interior/flowers.png" alt="" crossorigin="" data-sampler="planeTexture">
+        </div>
+        <div class="mt-5 opacity-40 max-sm:text-sm">Цветы Атлантиды</div>
+        <div class="font-alt mt-2 text-xl sm:text-2xl">4000 руб</div>
+      </div>
+      <div class="interior-item mb-4 md:mb-5 lg:mb-16">
+        <div class="interior-item-plane">
+          <img src="img/interior/sea.png" alt="" crossorigin="" data-sampler="planeTexture">
+        </div>
+        <div class="mt-5 opacity-40 max-sm:text-sm">Цветы Атлантиды</div>
+        <div class="font-alt mt-2 text-xl sm:text-2xl">4000 руб</div>
+      </div>
+      <div class="interior-item mb-4 md:mb-5 lg:mb-16">
+        <div class="interior-item-plane">
+          <img src="img/interior/atlantide.png" alt="" crossorigin="" data-sampler="planeTexture">
+        </div>
+        <div class="mt-5 opacity-40 max-sm:text-sm">Цветы Атлантиды</div>
+        <div class="font-alt mt-2 text-xl sm:text-2xl">4000 руб</div>
+      </div>
+      <div class="interior-item mb-4 md:mb-5 lg:mb-16">
+        <div class="interior-item-plane">
+          <img src="img/interior/flowers.png" alt="" crossorigin="" data-sampler="planeTexture">
+        </div>
+        <div class="mt-5 opacity-40 max-sm:text-sm">Цветы Атлантиды</div>
+        <div class="font-alt mt-2 text-xl sm:text-2xl">4000 руб</div>
+      </div>
+      <div class="interior-item mb-4 md:mb-5 lg:mb-16">
+        <div class="interior-item-plane">
+          <img src="img/interior/sea.png" alt="" crossorigin="" data-sampler="planeTexture">
+        </div>
+        <div class="mt-5 opacity-40 max-sm:text-sm">Цветы Атлантиды</div>
+        <div class="font-alt mt-2 text-xl sm:text-2xl">4000 руб</div>
+      </div>
+    </div>
+  </section>
+
+  <section class="about relative ">
+    <div class="about-bg">
+      <div class="about-bg-grid max-lg:hidden">
+        <div class="about-bg-item">
+          <img src="img/about-bg/1.png" alt="" class="w-full">
+        </div>
+        <div class="about-bg-item">
+          <img src="img/about-bg/1.png" alt="">
+        </div>
+        <div class="about-bg-item w-2/3 mt-[-33%]">
+          <img src="img/about-bg/2.png" alt="" class="w-full">
+        </div>
+        <div class="about-bg-item">
+          <img src="img/about-bg/3.png" alt="" class="w-full">
+        </div>
+        <div class="about-bg-item">
+          <img src="img/about-bg/4.png" alt="" class="w-full">
+        </div>
+        <div class="about-bg-item">
+          <img src="img/about-bg/1.png" alt="" class="w-full">
+        </div>
+        <div class="about-bg-item w-2/3 ml-auto mb-[-33%]">
+          <img src="img/about-bg/5.png" alt="" class="w-full">
+        </div>
+        <div class="about-bg-item">
+          <img src="img/about-bg/6.png" alt="" class="w-full">
+        </div>
+        <div class="about-bg-item">
+          <img src="img/about-bg/1.png" alt="" class="w-full">
+        </div>
+      </div>
+      <img src="img/about-mobile.jpg" alt="" class="lg:hidden absolute left-0 top-0 w-full h-full object-cover">
+    </div>
+    <div class="about-content relative">
+      <img src="img/about-flag.svg" alt="" class="mx-auto mb-6 sm:mb-11">
+      <div class="title leading-none text-center">
+        Для вашего <br>
+        интерьера
+      </div>
+      <div class="mt-6 sm:mt-9 text-center leading-normal max-sm:text-sm">
+        С помощью разных инструментов <br>
+        и материалов на поверхности планшета <br>
+        или холста создаётся рельеф, фактура
+      </div>
+      <button class="btn btn-whitebg btn-black  mt-8 sm:mt-14 mx-auto">Смотреть всё</button>
+    </div>
+  </section>
+
+  <section class="slider">
+    <div class="slider-item">
+      <div class="slider-content-swiper swiper">
+        <div class="swiper-wrapper">
+          <% for(let i = 0; i < 3; i++) { %>
+          <div class="slider-content swiper-slide">
+            <div class="title text-center">Добавьте морскую свежесть</div>
+            <div class="mt-6 xl:mt-11 leading-normal opacity-60 text-center max-xl:text-sm">
+              Во время работы над картиной Репин серьезно поссорился <br class="max-xl:hidden">
+              с моделью. Как известно, художника может обидеть <br class="max-xl:hidden">
+              каждый, но немногие могут отомстить так изобретательно, <br class="max-xl:hidden">
+              как это сделал Репин. Обиженный художник «переодел» <br class="max-xl:hidden">
+              Софью на портрете в монашеские одежды.
+            </div>
+            <button class="mt-6 xl:mt-16 mx-auto btn btn-black btn-whitebg">Купить картину</button>
+          </div>
+          <% } %>
+        </div>
+      </div>
+      <div class="slider-product-swiper swiper">
+        <div class="swiper-wrapper">
+          <% for(let i = 0; i < 3; i++) { %>
+          <div class="slider-product flex flex-col items-center swiper-slide">
+
+            <div class="interior-item-plane">
+              <img src="img/interior/atlantide.png" alt="" crossorigin="" data-sampler="planeTexture">
+            </div>
+            <div class="mt-5 opacity-40 max-sm:text-sm">Цветы Атлантиды</div>
+            <div class="font-alt mt-2 text-xl sm:text-2xl">4000 руб</div>
+
+
+          </div>
+          <% } %>
+        </div>
+      </div>
+      <button class="btn btn-text slider-item-prev">
+        <svg class="icon">
+          <use xlink:href="img/icons.svg#arrow-left" />
+        </svg>
+      </button>
+      <button class="btn btn-text slider-item-next">
+        <svg class="icon">
+          <use xlink:href="img/icons.svg#arrow-right" />
+        </svg>
+      </button>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-logo">
+      <img src="img/logo-white.svg" alt="">
+    </div>
+    <div class="footer-soc">
+      <div class="flex gap-2">
+        <a href="" target="_blank" class="btn btn-text">
+          <img src="img/telegramm.svg" alt="">
+        </a>
+        <a href="" target="_blank" class="btn btn-text">
+          <img src="img/pinterest.svg" alt="">
+        </a>
+      </div>
+    </div>
+
+    <div class="opacity-40">Интерьерные картины для вашего дома</div>
+    <a href="https://stdkit.ru" target="_blank" class="opacity-40">Разработка: Студия К.И.Т.</a>
+
+
+  </footer>
+
+
 </body>
 
 </html>
